# gaze

./: .gitignore  README.md  pyproject.toml  setup.py
gaze/: __init__.py  __main__.py  notebook_utils.py  page_utils.py  server_utils.py  spec.py
gaze/cli/: cli_run.py  root_command.py
gaze/cli/subcommands/: extract_command.py
gaze/templates/: base.html  figure_gallery.html  old_base.html
